@@ -1,14 +1,12 @@
 
 
-1.0
-Nested custom inline tags issue
+5.0
 Style on bowse / search / tabs / editor content (attachment bg on embed tags)
 Ajax Browse support for links
 Override TinyMCE translations and use it for all js strings (fixes fullscreen description text++)
 
 
 
-1.1
+5.1
 Custimizable formats selector (custom tags and classes)
-Disable css and js packer when DevMode is on to make it easier to debug code
-Support for requried values and custom validation functions in popups
+Support for requried values and custom validation functions in popups?
