@@ -63,3 +63,24 @@ DevelopmentMode=disabled
 # Use relative URLs (without host) inside the editor.
 RelativeURL=disabled
 
+
+# Settings for the js / css packer included in OE
+# The Packer lets you define custom functions that can generate CSS or JS dynamically
+# Here is an example of setting up such a function:
+#
+#[Packer_<custom_packer>]
+## Optional, uses <custom_packer> as class name if not set
+#Class=MyCustomJsGeneratorClass
+## Optional, uses autoload system if not defined
+#File=extension/ezoe/classes/mycustomjsgenerator.php
+#
+# Definition of use in template:
+# {ezoescript('<custom_packer>::<funtion_name>[::arg1]')}
+#
+# See in extension/ezoe/autoloads/ezoepacker.php for more info on how
+# to set up the php part!
+
+[Packer_ezoe]
+Class=eZOEPackerFunctions
+File=extension/ezoe/classes/ezoepackerfunctions.php
+
