@@ -9,6 +9,8 @@ eZ Online Editor MCE extension Changelog
 * custom tags now properly switching tags from div to span and back when changed.
 * made all poup dialogs use one unified and extendable javascript api for common funcions
 * clearing float on embed and custom block tags
+* Fixed nested custom inline tags
+* merging cells when cells where cells where TH type fixed
 
 0.98
 * string translations
